# deepwiki-open

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DELETED_FILES_LIST.md  DEPLOYMENT.md  Dockerfile  Dockerfile-appengine  Dockerfile-ollama-local  Dockerfile.claude-run  Dockerfile.claude-run.optimized  ENTERPRISE_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Ollama-instruction.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.kr.md  README.md  README.pt-br.md  README.ru.md  README.vi.md  README.zh-tw.md  README.zh.md  README_SINGLE_PROVIDER.md  SINGLE_PROVIDER_MIGRATION.md  STARTUP.md  TIMEOUT_FIX_DOCUMENTATION.md  app.yaml  auto-deploy.sh  build_publish.sh  claude-run.config.json  cloudbuild.optimized.yaml  cloudbuild.persistent.yaml  cloudbuild.yaml  deepwiki_single.py  deploy-fixed.sh  (+20 more)
.beads/: issues.jsonl
.devcontainer/: devcontainer.json
.trae/: TODO.md
api/: README.md  REFACTORING_VERIFICATION.md  anthropic_client.py  api.py  ast_chunker.py  ast_integration.py  bedrock_client.py  config.py  data_pipeline.py  deepseek_client.py  enable_ast.py  enhanced_pipeline.py  enterprise_bge_embedder_client.py  enterprise_openai_client.py  file_utils.py  google_embedder_client.py  google_genai_client.py  litellm_client.py  llm.py  logging_config.py  main.py  minimax_client.py  model_config.py  ollama_patch.py  openai_client.py  openrouter_client.py  prompts.py  publish.py  pyproject.toml  rag.py  requirements.txt  simple_chat.py  sync_scheduler.py  utils.py  vertex_client.py  vertexai_embedder_client.py  voyage_client.py  (+2 more)
(+184 files in other folders)
