[project]
name = "deepwiki-dj"
version = "0.1.0"
description = "Implementation of https://github.com/AsyncFuncAI/deepwiki-open in Django"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
]
